openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: watney
    app.kubernetes.io/component: watney
    app.kubernetes.io/instance: watney
    app.kubernetes.io/name: watney
    app.kubernetes.io/part-of: watney
  name: watney
  namespace: insights-qe-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: watney
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: watney
        deploymentconfig: watney
    spec:
      containers:
        image: quay.io/btweed/watney:latest
        imagePullPolicy: Always
        name: watney
        resources:
          limits:
            cpu: 200m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
