openshift/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/catastrophe-brandon/watney
  labels:
    app: watney
    app.kubernetes.io/component: watney
    app.kubernetes.io/instance: watney
    app.kubernetes.io/name: watney
    app.kubernetes.io/part-of: watney
  name: watney
  namespace: insights-qe-dev
spec:
  clusterIP: 172.30.27.141
  clusterIPs:
  - 172.30.27.141
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: watney
    deploymentconfig: watney
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
